# constraint-based-search

./: .clang-format  .gitignore  .gitlab-ci.yml  CBS.cpp  CBS.h  CMakeLists.txt  Dockerfile  LICENSE  Lincoln-README.md  MySimINFOCOM2009.cpp  README.md  build_container.sh  def.h  utility.h
examples/: req0.vnr  sn_cbs.in
examples/online-test/: req18.vnr  req4.vnr
lincoln-tests/: out.json  req0.vnr  req1.vnr  sn_cbs.in
service/: .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go
service/pkg/: demo-2.request  helper.go  helper_test.go  integrated.request  mockcbs.request  req0.vnr
src/: CBS.cpp  MySimINFOCOM2009.cpp  cbs.cpp  cbs.hpp  def.h  def.hpp  main.cpp  simulator.cpp  simulator.h  simulator.hpp  utility.cpp  utility.h  utility.hpp
test-vnr/: sub.txt
test-vnr/offline-test/17/: req0.txt
test-vnr/offline-test/19/: req0.txt
test-vnr/offline-test/2/: req0.txt
test-vnr/offline-test/20/: req0.txt
test-vnr/offline-test/5/: req0.txt
test-vnr/online-test/: req15.txt  req16.txt
test_vnr/offline_test/10/: req0.txt
test_vnr/offline_test/12/: req0.txt
test_vnr/offline_test/13/: req0.txt
test_vnr/offline_test/3/: req0.txt
test_vnr/offline_test/7/: req0.txt
test_vnr/offline_test/9/: req0.txt
test_vnr/online_test/: req0.txt  req1.txt  req11.txt  req14.txt  req6.txt  req8.txt
